// import 'package:learn_dart_together/21_design/core/result.dart';
// import 'package:learn_dart_together/21_design/data/repository/user_repository.dart';
//
// import '../../../21_design/data/model/user.dart';
//
//
// abstract interface class UserDataSource {
//    Future<Result<User, NetworkError>> getUserCreate(User user);
//
//    Future<Result<User, NetworkError>> getUserRead(int id);
//
//    Future<Result<List<User>, NetworkError>> fetchReadUsers();
//
//    Future<Result<User, NetworkError>> getUserUpdate(User user);
//
//    Future<Result<User, NetworkError>> getUserDelete(User user);
// }